tests/types/t6969.nim
discard """
errormsg: "invalid type: 'object' for var"
line: 6
"""

var a: object a: int
# or
var b: ref object a: int
# or
var c: ptr object a: int